# Basic-Bot-Net-Lab

./: BotBackground.py  BotLibrary.py  BotMain.py  BotNet.py  BotTest.py  README.md  RunBotNet.py  clean-and-build.sh  clean.py  pyproject.toml  setup.py
data/: BaseDockerfile
data/Dockerfiles/: Dockerfile-13
dockerfiles/debian-0/: Dockerfile
dockerfiles/debian-1/: Dockerfile
dockerfiles/debian-10/: Dockerfile
dockerfiles/debian-100/: Dockerfile
dockerfiles/debian-101/: Dockerfile
dockerfiles/debian-102/: Dockerfile
dockerfiles/debian-103/: Dockerfile
dockerfiles/debian-104/: Dockerfile
dockerfiles/debian-105/: Dockerfile
dockerfiles/debian-106/: Dockerfile
dockerfiles/debian-107/: Dockerfile
dockerfiles/debian-108/: Dockerfile
dockerfiles/debian-109/: Dockerfile
dockerfiles/debian-11/: Dockerfile
dockerfiles/debian-110/: Dockerfile
dockerfiles/debian-111/: Dockerfile
dockerfiles/debian-112/: Dockerfile
dockerfiles/debian-113/: Dockerfile
dockerfiles/debian-114/: Dockerfile
dockerfiles/debian-115/: Dockerfile
dockerfiles/debian-116/: Dockerfile
dockerfiles/debian-117/: Dockerfile
dockerfiles/debian-118/: Dockerfile
dockerfiles/debian-119/: Dockerfile
dockerfiles/debian-12/: Dockerfile
dockerfiles/debian-120/: Dockerfile
dockerfiles/debian-121/: Dockerfile
dockerfiles/debian-122/: Dockerfile
dockerfiles/debian-123/: Dockerfile
dockerfiles/debian-124/: Dockerfile
dockerfiles/debian-125/: Dockerfile
dockerfiles/debian-126/: Dockerfile
dockerfiles/debian-127/: Dockerfile
set-up/: CreateImages.py
(+310 files in other folders)
